--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second github repo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href=".css">
 </head>
 <body>
     <h1>It is a butterfly</h1>
     <h2>mama i can code now</h2>
-    <h3>new code changed</h3>
+    <h3>new code changed to orange</h3>
     <p>more paragraph</p>
     <p>i am coding and coding</p>
 </body>
