--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href=".css">
 </head>
 <body>
-    <h1>It is a butterfly</h1>
+    <h1>It is a butterfly github.com</h1>
     <h2>mama i can code now</h2>
-    <h3>new code changed to orange</h3>
+    <h3>new code changed to orangered</h3>
     <p>more paragraph</p>
     <p>i am coding and coding</p>
+    <img src="images.jpg" alt="">
 </body>
 </html>
