--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>more paragraph</p>
     <p>i am coding and coding</p>
     <img src="images.jpg" alt="">
+    <img src="A.jpg" alt="">
 </body>
 </html>
